[package]
name = "minparse"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A minimalist argument parser"
authors = ["Octalbyte <octalbyte0o52@protonmail.com"]
repository = "https://github.com/Octalbyte/minparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
